added configurations to prop file

--- a/MyTestAutomation.properties
+++ b/MyTestAutomation.properties
@@ -27,3 +27,31 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
+
+
+#Automation
+
+basePath="./"
+remoteURL=http://44.203.119.86:4444/wd/hub
+#remoteURL=http://localhost:4444/wd/hub
+remoteRun=true
+
+url=http://www.google.com
+
+#Database
+db_url=jdbc:mysql://aws-rds-mysql-database.cm65spyo1xfk.us-east-1.rds.amazonaws.com:3306/test_automation
+db_username=tamil
+db_password=tamilarasan
+
+#oracle_db_url=jdbc:oracle:thin:@//localhost:1522/ORCLPDB1.localdomain
+oracle_db_url=jdbc:oracle:thin:@Oracle_Database:1521/ORCLPDB1.localdomain
+oracle_db_username=tamil
+oracle_db_password=tamilarasan
+
+#mySQL
+mysql_db_url=jdbc:mysql://aws-rds-mysql-database.cm65spyo1xfk.us-east-1.rds.amazonaws.com:3306/test_automation
+mysql_db_username=tamil
+mysql_db_password=tamilarasan
+
+
+
