--- a/MyTestAutomation.properties
+++ b/MyTestAutomation.properties
@@ -11,8 +11,8 @@ server.port=8080
 ##spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 spring.thymeleaf.enabled=true
 
