--- a/spring.session.store-type.properties
+++ b/spring.session.store-type.properties
@@ -16,6 +16,10 @@ spring.jpa.properties.hibernate.format_sql=false
 
 spring.thymeleaf.enabled=true
 
+##Session Management
+spring.session.store-type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
 
 #mySQL
 spring.datasource.url=jdbc:mysql://aws-rds-mysql-database.cm65spyo1xfk.us-east-1.rds.amazonaws.com:3306/test_automation
