--- a/MyTestAutomation..properties
+++ b/MyTestAutomation..properties
@@ -17,9 +17,13 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.thymeleaf.enabled=true
 
 ##Session Management
-spring.session.store-type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
+#spring.session.store-type=redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
+
+spring.session.store-type=jdbc
+#spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=900
 
 #mySQL
 spring.datasource.url=jdbc:mysql://aws-rds-mysql-database.cm65spyo1xfk.us-east-1.rds.amazonaws.com:3306/test_automation
