--- a/spring.session.store-type.properties
+++ b/spring.session.store-type.properties
@@ -29,7 +29,7 @@ spring.thymeleaf.enabled=true
 spring.datasource.url=jdbc:mysql://aws-rds-mysql-database.cm65spyo1xfk.us-east-1.rds.amazonaws.com:3306/test_automation
 spring.datasource.username=tamil
 spring.datasource.password=tamilarasan
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
