--- a/MyTestAutomation.properties
+++ b/MyTestAutomation.properties
@@ -21,15 +21,15 @@ spring.thymeleaf.enabled=true
 #spring.redis.host=localhost
 #spring.redis.port=6379
 
-# spring.session.store-type=jdbc
-# spring.session.jdbc.initialize-schema=always
-# spring.session.timeout.seconds=900
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=900
 
 #mySQL
 spring.datasource.url=jdbc:mysql://aws-rds-mysql-database.cm65spyo1xfk.us-east-1.rds.amazonaws.com:3306/test_automation
 spring.datasource.username=tamil
 spring.datasource.password=tamilarasan
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
